=============
Release 0.8.7
=============

* new methods to detect the peaks, more robust when low thresholds are fixed
* all channels are now normalized before whitening and clustering

=============
Release 0.8.6
=============

* Export from manual sorting with MATLAB to phy is now possible
* Modification to pass SpikeSorters test suite

=============
Release 0.8.5
=============

* fix a bug while removing noisy templates in meta merging
* refactoring of the meta merging GUI, addition of bhatta distances
* meta merging more robust for non stationary recordings
* enhance logging if parameters are missing and/or not defined
* can now display the electrode labels in preview GUI
* detects if a wrong install of MPI is present (linking with mpi4py)
* conda install overwrites the old parameter file
* raw dispay of the MUA in the result GUI (to be improved)
* display an error if not all nodes on a cluster can read the datafiles
* fix a bug for thresholding method using dead times

=============
Release 0.8.4
=============

* fix if no spikes are found on some electrodes
* fix as mean/median-pca methods were broken (albeit not used)
* fix to prevent a rare crash while loading too sparse overlaps
* fix a bug with the new dip method in python 2.7
* add the thresholding method to extract only MUA activity (requested by users)
* channel lists in probe files can be non sorted
* memory usage is dynamically adapted to reduce memory footprint
* hdf5 and npy file format can now work with 3D arrays (x, y, time) or (time, x, y)
* fix a bug if basis for pos and neg spikes have different sizes
* add some docstrings (thanks to Jose Guzman)
* sparse export for phy is now the default
* comments can now be added in the trigger/dead times files
* 4096 channels can now run on a single machine, with low memory consumption
* basic support for 3d probes, without any visualization
* more robust to saturating channels with nan_to_num