@@ -121,11 +121,11 @@ def main(params, nb_cpu, nb_gpu, use_gpu):
 
     if matched_filter:
         if sign_peaks in ['negative', 'both']:
-            waveform_neg  = io.load_data(params, 'waveform')
+            waveform_neg  = io.load_data(params, 'waveform')[::-1]
             waveform_neg /= (numpy.abs(numpy.sum(waveform_neg))* len(waveform_neg))
             matched_tresholds_neg = io.load_data(params, 'matched-thresholds')
         if sign_peaks in ['positive', 'both']:
-            waveform_pos  = io.load_data(params, 'waveform-pos')
+            waveform_pos  = io.load_data(params, 'waveform-pos')[::-1]
             waveform_pos /= (numpy.abs(numpy.sum(waveform_pos))* len(waveform_pos))
             matched_tresholds_pos = io.load_data(params, 'matched-thresholds-pos')
 
@@ -294,6 +294,9 @@ def main(params, nb_cpu, nb_gpu, use_gpu):
                         local_chunk = numpy.dot(local_chunk, spatial_whitening)
                 if do_temporal_whitening:
                     local_chunk = scipy.ndimage.filters.convolve1d(local_chunk, temporal_whitening, axis=0, mode='constant')
+
+                local_chunk /= thresholds
+
                 #print "Extracting the peaks..."
                 all_peaktimes = numpy.zeros(0, dtype=numpy.uint32)
                 all_extremas  = numpy.zeros(0, dtype=numpy.uint32)
@@ -303,25 +306,25 @@ def main(params, nb_cpu, nb_gpu, use_gpu):
                     if sign_peaks in ['positive', 'both']:
                         filter_chunk = scipy.ndimage.filters.convolve1d(local_chunk, waveform_pos, axis=0, mode='constant')
                         for i in xrange(N_e):
-                            peaktimes = algo.detect_peaks(filter_chunk[:, i], matched_tresholds_pos[i], mpd=dist_peaks)
+                            peaktimes = scipy.signal.find_peaks(filter_chunk[:, i], height=matched_tresholds_pos[i], width=spike_width, distance=dist_peaks, wlen=dist_peaks)[0]
                             all_peaktimes   = numpy.concatenate((all_peaktimes, peaktimes))
                             all_extremas    = numpy.concatenate((all_extremas, i*numpy.ones(len(peaktimes), dtype=numpy.uint32)))
 
                     if sign_peaks in ['negative', 'both']:
                         filter_chunk = scipy.ndimage.filters.convolve1d(local_chunk, waveform_neg, axis=0, mode='constant')
                         for i in xrange(N_e):
-                            peaktimes = algo.detect_peaks(filter_chunk[:, i], matched_tresholds_neg[i], mpd=dist_peaks)
+                            peaktimes = scipy.signal.find_peaks(filter_chunk[:, i], height=matched_tresholds_neg[i], width=spike_width, distance=dist_peaks, wlen=dist_peaks)[0]
                             all_peaktimes   = numpy.concatenate((all_peaktimes, peaktimes))
                             all_extremas    = numpy.concatenate((all_extremas, i*numpy.ones(len(peaktimes), dtype=numpy.uint32)))
 
                 else:
                     for i in xrange(N_e):
                         if sign_peaks == 'negative':
-                            peaktimes = algo.detect_peaks(local_chunk[:, i], thresholds[i], valley=True, mpd=dist_peaks)
+                            peaktimes = scipy.signal.find_peaks(-local_chunk[:, i], height=1, width=spike_width, distance=dist_peaks, wlen=dist_peaks)[0]
                         elif sign_peaks == 'positive':
-                            peaktimes = algo.detect_peaks(local_chunk[:, i], thresholds[i], valley=False, mpd=dist_peaks)
+                            peaktimes = scipy.signal.find_peaks(local_chunk[:, i], height=1, width=spike_width, distance=dist_peaks, wlen=dist_peaks)[0]
                         elif sign_peaks == 'both':
-                            peaktimes = algo.detect_peaks(numpy.abs(local_chunk[:, i]), thresholds[i], valley=False, mpd=dist_peaks)
+                            peaktimes = scipy.signal.find_peaks(numpy.abs(local_chunk[:, i]), height=1, width=spike_width, distance=dist_peaks, wlen=dist_peaks)[0]
                         all_peaktimes = numpy.concatenate((all_peaktimes, peaktimes))
                         all_extremas  = numpy.concatenate((all_extremas, i*numpy.ones(len(peaktimes), dtype=numpy.uint32)))
 
@@ -624,7 +627,7 @@ def main(params, nb_cpu, nb_gpu, use_gpu):
                             if matched_filter:
                                 bound = matched_tresholds_pos[ielec]
                             else:
-                                bound = thresholds[ielec]
+                                bound = 1
                             if bound < ampmax:
                                 bins =  [-numpy.inf] + numpy.linspace(bound, ampmax, nb_ss_bins - 1).tolist() + [numpy.inf]
                             else:
@@ -634,7 +637,7 @@ def main(params, nb_cpu, nb_gpu, use_gpu):
                             if matched_filter:
                                 bound = -matched_tresholds_neg[ielec]
                             else:
-                                bound = -thresholds[ielec]
+                                bound = -1
                             if ampmin < bound:
                                 bins  = [-numpy.inf] + numpy.linspace(ampmin, bound, nb_ss_bins - 1).tolist() + [numpy.inf]
                             else:
@@ -963,9 +966,9 @@ def main(params, nb_cpu, nb_gpu, use_gpu):
                         tmp_templates = to_filter
 
                     if p == 'neg':
-                        tmpidx = numpy.unravel_index(tmp_templates.argmin(), tmp_templates.shape[1])
+                        tmpidx = divmod(tmp_templates.argmin(), tmp_templates.shape[1])
                     elif p == 'pos':
-                        tmpidx = numpy.unravel_index(tmp_templates.argmax(), tmp_templates.shape[1])
+                        tmpidx = divmod(tmp_templates.argmax(), tmp_templates.shape[1])
 
                     shift     = template_shift - tmpidx[1]
 
@@ -1007,11 +1010,15 @@ def main(params, nb_cpu, nb_gpu, use_gpu):
                         amplitudes       = numpy.dot(sub_data_flat, first_flat)
                         amplitudes      /= numpy.sum(first_flat**2)
 
-                        variation        = numpy.median(numpy.abs(amplitudes - numpy.median(amplitudes)))
+                        variation        = numpy.median(numpy.abs(amplitudes - 1))
 
-                        physical_limit   = noise_thr*(-thresholds[indices[tmpidx[0]]])/tmp_templates.min()
-                        amp_min          = min(0.8, max(physical_limit, numpy.median(amplitudes) - dispersion[0]*variation))
-                        amp_max          = max(1.2, numpy.median(amplitudes) + dispersion[1]*variation)
+                        if p == 'neg':
+                            physical_limit = -noise_thr*thresholds[tmpidx[0]]/tmp_templates[tmpidx[0]].min()
+                        elif p == 'pos':
+                            physical_limit = noise_thr*thresholds[tmpidx[0]]/tmp_templates[tmpidx[0]].max()
+
+                        amp_min          = max(physical_limit, 1 - dispersion[0]*variation)
+                        amp_max          = 1 + dispersion[1]*variation
                         amps_lims[g_count] = [amp_min, amp_max]
                         myamps            += [[amp_min, amp_max]]
 
