@@ -4,6 +4,7 @@ Release 0.8.7
 
 * new methods to detect the peaks, more robust when low thresholds are fixed
 * all channels are now normalized before whitening and clustering
+* more accurate fitting procedure, slightly slower
 
 =============
 Release 0.8.6
